syntax = "proto3";

package user;

option go_package = "./proto";

service UserService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc SignIn(SignInRequest) returns (SignInResponse);
    rpc Logout(LogoutRequest) returns(LogoutResponse);
}

message User {
    string uuid = 1;
    string username = 2;
    string password = 3;
    string email = 4;
  }

message SignUpRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message SignUpResponse {
    string userID = 1;
}

message SignInRequest {
    string email = 1;
    string password = 2;
  }
  
message SignInResponse {
    User user = 1;
    string session_id = 2;
  }

message LogoutRequest{}

message LogoutResponse {}